@@ -28,7 +28,9 @@ if isempty(dsFile)
 end
 
 %Get the voxel size from the file name
-
+if iscell(dsFile) && length(dsFile)>1
+    dsFile=dsFile{1};
+end
 tok=regexp(dsFile,'.*_([012345]\d)_([012345]\d)_0\d','tokens');
 if isempty(tok)
     fprintf('%s - Can not find voxel size from file name %s\n', mfilename, dsFile), return
