@@ -1,7 +1,7 @@
-function invertExportedSparseFiles(inverted,logging)
+function invertExportedSparseFiles(inverted)
 % Load CSV files with sparse point data and invert them
 %
-% function invertExportedSparseFiles(inverted,logging)
+% function invertExportedSparseFiles(inverted)
 %
 % Purpose
 % This function is called by ARAregister to register all sparse
@@ -11,49 +11,42 @@ function invertExportedSparseFiles(inverted,logging)
 % input args. Just call from experiment root directory. 
 %
 %
-% Inputs
-% inverted - the inverted transformed data stored in a MAT file
-% logging - the structure containing the names of the exported neurite trees
+% Inputs [optional]
+% inverted - The inverted transform data structure stored in a MAT file. 
+%            This is the  output of invertElastixTransform from MelastiX. 
+%            If you ran ARAregister, this will be found in sample2ARA/inverted.mat
+%            Calling this funtion without input arguments will cause it to 
+%            search for this file and attempt to load it. 
 %
 %
-% Rob Campbell
+% Rob Campbell - Basel
+% Modified July 2019 to not rely on logging structure, which we no longer make
 
+
+
+% Set up directory names
 S=settings_handler('settingsFiles_ARAtools.yml');
-elastixDir = fullfile(S.downSampledDir,S.sample2araDir);
+downsampledDir = aratools.getDownSampledDir;
+elastixDir = fullfile(downsampledDir,S.sample2araDir);
 
+
+% If running without input arguments, find the inverted .mat file
 if nargin<1 | isempty(inverted)
-    load(fullfile(elastixDir,S.invertedMatName)) %loads "inverted"
-end
-
-if nargin<2 | isempty(logging)
-    logFileName=fullfile(S.downSampledDir,S.sparseDataMatLogFname);
-    if ~exist(logFileName,'file')
-        fprintf('Can not find log file %s. SKIPPING SPARSE POINT TRANSFORMATION!\n',logFileName)
+    invFname = fullfile(elastixDir,S.invertedMatName);
+    if ~exist(invFname, 'file')
+        fprintf('%s can not find elastix.m output file at %s\n',...
+            mfilename, invFname)
         return
     end
-    load(logFileName) %loads "logging"
-
-    %example loggin:
-    %>> logging
-    %
-    % logging = 
-    %
-    %  struct with fields:
-    %
-    %    fname: 'YH298_traced_cells_tree_01.csv'
-    %    downsample: [26.7950 2.7780]
-    %    type: 'tree'
-
-
+    load(invFname) %loads a variable called "inverted"
 end
 
 
-for ii=1:length(logging)
-    fname = fullfile(S.downSampledDir,logging(ii).fname);
-    if ~exist(fname,'file')
-        fprintf('skipping missing file %s\n',fname)
-        continue
-    end
-    fprintf('Beginning transform of %s file %s\n',logging(ii).type,fname)
-    transformSparsePoints(fname,inverted,fullfile(elastixDir,logging(ii).fname))
+
+% Search for all CSV files, which we will assume are sparse data 
+sparseFiles = dir(fullfile(downsampledDir,'*.csv'));
+for ii=1:length(sparseFiles)
+    fname = fullfile(downsampledDir,sparseFiles(ii).name);
+    fprintf('Beginning transform of sparse data file %s\n', fname)
+    transformSparsePoints(fname,inverted,fullfile(elastixDir,sparseFiles(ii).name))
 end
